# novelist2

./: .gitignore  Novelist 2.0 – Technical Design Specification.md  README.md  docker-compose.yml  gap_analysis_sprint_w1.md  novelist_vision_scope_v1.md  package-lock.json  pyproject.toml
api/: __init__.py  main.py
core/: __init__.py  beats.py  bulk_draft.py  celery_app.py  draft.py  env.py  openai_wrap.py  outline.py  projects.py  prompt_builders.py  retry.py  summarizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: LiveConsole.jsx
frontend/src/dashboard/: Dashboard.jsx
frontend/src/wizard/: Wizard.jsx
plugins/: theme.py
schemas/: outline.v1.json
worker/: __init__.py  tasks.py
